[project]
name = "learn-algorithm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kentakom1213", email = "kentakom1213@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "learn_algorithm:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/learn_algorithm"]
