[project]
name = "virtual-contest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kentakom1213", email = "kentakom1213@gmail.com" }
]
dependencies = [
    "online-judge-api-client>=10.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/virtual_contest"]
