[package]
name = "dp"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
dp-a = { alias = "a", problem = "https://atcoder.jp/contests/dp/tasks/dp_a" }
dp-b = { alias = "b", problem = "https://atcoder.jp/contests/dp/tasks/dp_b" }
dp-c = { alias = "c", problem = "https://atcoder.jp/contests/dp/tasks/dp_c" }
dp-d = { alias = "d", problem = "https://atcoder.jp/contests/dp/tasks/dp_d" }
dp-e = { alias = "e", problem = "https://atcoder.jp/contests/dp/tasks/dp_e" }
dp-f = { alias = "f", problem = "https://atcoder.jp/contests/dp/tasks/dp_f" }
dp-g = { alias = "g", problem = "https://atcoder.jp/contests/dp/tasks/dp_g" }
dp-h = { alias = "h", problem = "https://atcoder.jp/contests/dp/tasks/dp_h" }
dp-i = { alias = "i", problem = "https://atcoder.jp/contests/dp/tasks/dp_i" }
dp-j = { alias = "j", problem = "https://atcoder.jp/contests/dp/tasks/dp_j" }
dp-k = { alias = "k", problem = "https://atcoder.jp/contests/dp/tasks/dp_k" }
dp-l = { alias = "l", problem = "https://atcoder.jp/contests/dp/tasks/dp_l" }
dp-m = { alias = "m", problem = "https://atcoder.jp/contests/dp/tasks/dp_m" }
dp-n = { alias = "n", problem = "https://atcoder.jp/contests/dp/tasks/dp_n" }
dp-o = { alias = "o", problem = "https://atcoder.jp/contests/dp/tasks/dp_o" }
dp-p = { alias = "p", problem = "https://atcoder.jp/contests/dp/tasks/dp_p" }
dp-q = { alias = "q", problem = "https://atcoder.jp/contests/dp/tasks/dp_q" }
dp-r = { alias = "r", problem = "https://atcoder.jp/contests/dp/tasks/dp_r" }
dp-s = { alias = "s", problem = "https://atcoder.jp/contests/dp/tasks/dp_s" }
dp-t = { alias = "t", problem = "https://atcoder.jp/contests/dp/tasks/dp_t" }
dp-u = { alias = "u", problem = "https://atcoder.jp/contests/dp/tasks/dp_u" }
dp-v = { alias = "v", problem = "https://atcoder.jp/contests/dp/tasks/dp_v" }
dp-w = { alias = "w", problem = "https://atcoder.jp/contests/dp/tasks/dp_w" }
dp-x = { alias = "x", problem = "https://atcoder.jp/contests/dp/tasks/dp_x" }
dp-y = { alias = "y", problem = "https://atcoder.jp/contests/dp/tasks/dp_y" }
dp-z = { alias = "z", problem = "https://atcoder.jp/contests/dp/tasks/dp_z" }

[[bin]]
name = "dp-a"
path = "src/bin/a.rs"

[[bin]]
name = "dp-b"
path = "src/bin/b.rs"

[[bin]]
name = "dp-c"
path = "src/bin/c.rs"

[[bin]]
name = "dp-d"
path = "src/bin/d.rs"

[[bin]]
name = "dp-e"
path = "src/bin/e.rs"

[[bin]]
name = "dp-f"
path = "src/bin/f.rs"

[[bin]]
name = "dp-g"
path = "src/bin/g.rs"

[[bin]]
name = "dp-h"
path = "src/bin/h.rs"

[[bin]]
name = "dp-i"
path = "src/bin/i.rs"

[[bin]]
name = "dp-j"
path = "src/bin/j.rs"

[[bin]]
name = "dp-k"
path = "src/bin/k.rs"

[[bin]]
name = "dp-l"
path = "src/bin/l.rs"

[[bin]]
name = "dp-m"
path = "src/bin/m.rs"

[[bin]]
name = "dp-n"
path = "src/bin/n.rs"

[[bin]]
name = "dp-o"
path = "src/bin/o.rs"

[[bin]]
name = "dp-p"
path = "src/bin/p.rs"

[[bin]]
name = "dp-q"
path = "src/bin/q.rs"

[[bin]]
name = "dp-r"
path = "src/bin/r.rs"

[[bin]]
name = "dp-s"
path = "src/bin/s.rs"

[[bin]]
name = "dp-t"
path = "src/bin/t.rs"

[[bin]]
name = "dp-u"
path = "src/bin/u.rs"

[[bin]]
name = "dp-v"
path = "src/bin/v.rs"

[[bin]]
name = "dp-w"
path = "src/bin/w.rs"

[[bin]]
name = "dp-x"
path = "src/bin/x.rs"

[[bin]]
name = "dp-y"
path = "src/bin/y.rs"

[[bin]]
name = "dp-z"
path = "src/bin/z.rs"

[dependencies]
ac-library-rs = "0.1.1"
once_cell = "1.18.0"
static_assertions = "1.1.0"
varisat = "0.2.2"
memoise = "0.3.2"
argio = "0.2.0"
bitvec = "1.0.1"
counter = "0.5.7"
hashbag = "0.1.11"
pathfinding = "4.3.0"
recur-fn = "2.2.0"
indexing = "0.4.1"
amplify = "3.14.2"
amplify_derive = "2.11.3"
amplify_num = "0.4.1"
easy-ext = "1.0.1"
multimap = "0.9.0"
btreemultimap = "0.1.1"
bstr = "1.6.0"
az = "1.2.1"
glidesort = "0.1.2"
tap = "1.0.1"
omniswap = "0.1.0"
multiversion = "0.7.2"
num = "0.4.1"
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-integer = "0.1.45"
num-iter = "0.1.43"
num-rational = "0.4.1"
num-traits = "0.2.15"
num-derive = "0.4.0"
ndarray = "0.15.6"
nalgebra = "0.32.3"
alga = "0.9.3"
libm = "0.2.7"
rand = "0.8.5"
getrandom = "0.2.10"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand_hc = "0.3.2"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
petgraph = "0.6.3"
indexmap = "2.0.0"
regex = "1.9.1"
lazy_static = "1.4.0"
ordered-float = "3.7.0"
ascii = "1.1.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.11.0"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.8.1"
im-rc = "15.1.0"
fixedbitset = "0.4.2"
bitset-fixed = "0.1.0"
proconio = { version = "0.4.5", features = ["derive"] }
text_io = "0.1.12"
rustc-hash = "1.1.0"
smallvec = "1.11.0"

[dev-dependencies]
