[package]
name = "language-test-202505"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
language-test-202505-abc049c = { alias = "abc049c", problem = "https://atcoder.jp/contests/language-test-202505/tasks/arc065_a" }
language-test-202505-abc081a = { alias = "abc081a", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc081_a" }
language-test-202505-abc081b = { alias = "abc081b", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc081_b" }
language-test-202505-abc083b = { alias = "abc083b", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc083_b" }
language-test-202505-abc085b = { alias = "abc085b", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc085_b" }
language-test-202505-abc085c = { alias = "abc085c", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc085_c" }
language-test-202505-abc086a = { alias = "abc086a", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc086_a" }
language-test-202505-abc086c = { alias = "abc086c", problem = "https://atcoder.jp/contests/language-test-202505/tasks/arc089_a" }
language-test-202505-abc087b = { alias = "abc087b", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc087_b" }
language-test-202505-abc088b = { alias = "abc088b", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc088_b" }
language-test-202505-abc169b = { alias = "abc169b", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc169_b" }
language-test-202505-abc244c = { alias = "abc244c", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc244_c" }
language-test-202505-abc259b = { alias = "abc259b", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc259_b" }
language-test-202505-abc325d = { alias = "abc325d", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc325_d" }
language-test-202505-abc328e = { alias = "abc328e", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc328_e" }
language-test-202505-abc345g = { alias = "abc345g", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc345_g" }
language-test-202505-abc358d = { alias = "abc358d", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc358_d" }
language-test-202505-abc370d = { alias = "abc370d", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc370_d" }
language-test-202505-abc385d = { alias = "abc385d", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc385_d" }
language-test-202505-abc411f = { alias = "abc411f", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc411_f" }
language-test-202505-abc421e = { alias = "abc421e", problem = "https://atcoder.jp/contests/language-test-202505/tasks/abc421_e" }
language-test-202505-ahc040a = { alias = "ahc040a", problem = "https://atcoder.jp/contests/language-test-202505/tasks/ahc040_a" }
language-test-202505-future-contest2019-final-a = { alias = "future-contest2019-final-a", problem = "https://atcoder.jp/contests/language-test-202505/tasks/future_contest_2019_final_a" }
language-test-202505-practice2-a = { alias = "practice2-a", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_a" }
language-test-202505-practice2-b = { alias = "practice2-b", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_b" }
language-test-202505-practice2-c = { alias = "practice2-c", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_c" }
language-test-202505-practice2-d = { alias = "practice2-d", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_d" }
language-test-202505-practice2-e = { alias = "practice2-e", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_e" }
language-test-202505-practice2-f = { alias = "practice2-f", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_f" }
language-test-202505-practice2-g = { alias = "practice2-g", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_g" }
language-test-202505-practice2-h = { alias = "practice2-h", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_h" }
language-test-202505-practice2-i = { alias = "practice2-i", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_i" }
language-test-202505-practice2-j = { alias = "practice2-j", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_j" }
language-test-202505-practice2-k = { alias = "practice2-k", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_k" }
language-test-202505-practice2-l = { alias = "practice2-l", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice2_l" }
language-test-202505-practice-a = { alias = "practice-a", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice_1" }
language-test-202505-practice-b = { alias = "practice-b", problem = "https://atcoder.jp/contests/language-test-202505/tasks/practice_2" }
language-test-202505-memorytest = { alias = "memorytest", problem = "https://atcoder.jp/contests/language-test-202505/tasks/memorytest_b" }

[[bin]]
name = "language-test-202505-abc049c"
path = "src/bin/abc049c.rs"

[[bin]]
name = "language-test-202505-abc081a"
path = "src/bin/abc081a.rs"

[[bin]]
name = "language-test-202505-abc081b"
path = "src/bin/abc081b.rs"

[[bin]]
name = "language-test-202505-abc083b"
path = "src/bin/abc083b.rs"

[[bin]]
name = "language-test-202505-abc085b"
path = "src/bin/abc085b.rs"

[[bin]]
name = "language-test-202505-abc085c"
path = "src/bin/abc085c.rs"

[[bin]]
name = "language-test-202505-abc086a"
path = "src/bin/abc086a.rs"

[[bin]]
name = "language-test-202505-abc086c"
path = "src/bin/abc086c.rs"

[[bin]]
name = "language-test-202505-abc087b"
path = "src/bin/abc087b.rs"

[[bin]]
name = "language-test-202505-abc088b"
path = "src/bin/abc088b.rs"

[[bin]]
name = "language-test-202505-abc169b"
path = "src/bin/abc169b.rs"

[[bin]]
name = "language-test-202505-abc244c"
path = "src/bin/abc244c.rs"

[[bin]]
name = "language-test-202505-abc259b"
path = "src/bin/abc259b.rs"

[[bin]]
name = "language-test-202505-abc325d"
path = "src/bin/abc325d.rs"

[[bin]]
name = "language-test-202505-abc328e"
path = "src/bin/abc328e.rs"

[[bin]]
name = "language-test-202505-abc345g"
path = "src/bin/abc345g.rs"

[[bin]]
name = "language-test-202505-abc358d"
path = "src/bin/abc358d.rs"

[[bin]]
name = "language-test-202505-abc370d"
path = "src/bin/abc370d.rs"

[[bin]]
name = "language-test-202505-abc385d"
path = "src/bin/abc385d.rs"

[[bin]]
name = "language-test-202505-abc411f"
path = "src/bin/abc411f.rs"

[[bin]]
name = "language-test-202505-abc421e"
path = "src/bin/abc421e.rs"

[[bin]]
name = "language-test-202505-ahc040a"
path = "src/bin/ahc040a.rs"

[[bin]]
name = "language-test-202505-future-contest2019-final-a"
path = "src/bin/future-contest2019-final-a.rs"

[[bin]]
name = "language-test-202505-practice2-a"
path = "src/bin/practice2-a.rs"

[[bin]]
name = "language-test-202505-practice2-b"
path = "src/bin/practice2-b.rs"

[[bin]]
name = "language-test-202505-practice2-c"
path = "src/bin/practice2-c.rs"

[[bin]]
name = "language-test-202505-practice2-d"
path = "src/bin/practice2-d.rs"

[[bin]]
name = "language-test-202505-practice2-e"
path = "src/bin/practice2-e.rs"

[[bin]]
name = "language-test-202505-practice2-f"
path = "src/bin/practice2-f.rs"

[[bin]]
name = "language-test-202505-practice2-g"
path = "src/bin/practice2-g.rs"

[[bin]]
name = "language-test-202505-practice2-h"
path = "src/bin/practice2-h.rs"

[[bin]]
name = "language-test-202505-practice2-i"
path = "src/bin/practice2-i.rs"

[[bin]]
name = "language-test-202505-practice2-j"
path = "src/bin/practice2-j.rs"

[[bin]]
name = "language-test-202505-practice2-k"
path = "src/bin/practice2-k.rs"

[[bin]]
name = "language-test-202505-practice2-l"
path = "src/bin/practice2-l.rs"

[[bin]]
name = "language-test-202505-practice-a"
path = "src/bin/practice-a.rs"

[[bin]]
name = "language-test-202505-practice-b"
path = "src/bin/practice-b.rs"

[[bin]]
name = "language-test-202505-memorytest"
path = "src/bin/memorytest.rs"

[dependencies]
ac-library-rs = "0.1.1"
# once_cell = "1.18.0"
# static_assertions = "1.1.0"
# varisat = "0.2.2"
memoise = "0.3.2"
# argio = "0.2.0"
bitvec = "1.0.1"
# counter = "0.5.7"
# hashbag = "0.1.11"
# pathfinding = "4.3.0"
# recur-fn = "2.2.0"
# indexing = "0.4.1"
# amplify = "3.14.2"
# amplify_derive = "2.11.3"
# amplify_num = "0.4.1"
# easy-ext = "1.0.1"
# multimap = "0.9.0"
# btreemultimap = "0.1.1"
# bstr = "1.6.0"
# az = "1.2.1"
# glidesort = "0.1.2"
# tap = "1.0.1"
# omniswap = "0.1.0"
# multiversion = "0.7.2"
num = "0.4.1"
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-integer = "0.1.45"
# num-iter = "0.1.43"
num-rational = "0.4.1"
num-traits = "0.2.15"
num-derive = "0.4.0"
# ndarray = "0.15.6"
# nalgebra = "0.32.3"
# alga = "0.9.3"
# libm = "0.2.7"
rand = "0.8.5"
# getrandom = "0.2.10"
# rand_chacha = "0.3.1"
# rand_core = "0.6.4"
# rand_hc = "0.3.2"
# rand_pcg = "0.3.1"
# rand_distr = "0.4.3"
# petgraph = "0.6.3"
# indexmap = "2.0.0"
regex = "1.9.1"
# lazy_static = "1.4.0"
# ordered-float = "3.7.0"
ascii = "1.1.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.11.0"
itertools-num = "0.1.3"
# maplit = "1.0.2"
# either = "1.8.1"
im-rc = "15.1.0"
# fixedbitset = "0.4.2"
# bitset-fixed = "0.1.0"
proconio = { version = "0.4.5", features = ["derive"] }
# text_io = "0.1.12"
rustc-hash = "1.1.0"
# smallvec = "1.11.0"
cp-library-rs = { path = "../../../cp-library/cp-library-rs" }

[dev-dependencies]
