[package]
name = "contest484"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
contest484-a = { alias = "a", problem = "https://yukicoder.me/problems/no/2671" }
contest484-b = { alias = "b", problem = "https://yukicoder.me/problems/no/2672" }
contest484-c = { alias = "c", problem = "https://yukicoder.me/problems/no/2673" }
contest484-d = { alias = "d", problem = "https://yukicoder.me/problems/no/2674" }
contest484-e = { alias = "e", problem = "https://yukicoder.me/problems/no/2675" }
contest484-f = { alias = "f", problem = "https://yukicoder.me/problems/no/2676" }
contest484-g = { alias = "g", problem = "https://yukicoder.me/problems/no/2677" }
contest484-h = { alias = "h", problem = "https://yukicoder.me/problems/no/2678" }

[[bin]]
name = "contest484-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest484-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest484-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest484-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest484-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest484-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest484-g"
path = "src/bin/g.rs"

[[bin]]
name = "contest484-h"
path = "src/bin/h.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
