[package]
name = "yurufuwa_onsite_06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoise = "0.3.2"
proconio = { version = "0.4.5", features = ["derive"] }
cp-library-rs = { path = "../../../../cp-library/cp-library-rs" }
